# from_gcc_to_cpp

./: .gitignore  Algorithms.md  Array.md  Arrays.md  AutoAndDecltype.md  Binding  Binding.md  CPP.md  CPPPerface.md  CharAndString.md  CharsAndStrings.md  Class.md  Classes.md  ConstConstexprAndStatic.md  ConstConstexprAndStaticKeywords.md  ConversionAndCasting.md  ConversionCastingAndVoidPointer.md  DynamicArrayOrStdVector.md  DynamicArraysOrStdVector.md  Enum.md  Enums.md  Extern.md  FromGccToCPP.md  Function.md  Functions.md  Gcc.md  HidingOverloadingOverridingAndOverwriting.md  IntroductionToTheCPPSTL.md  ListsAndForwardLists.md  MacroAndPragma.md  MacrosAndPragma.md  MapsAndUnorderedMaps.md  MapsUnorderedMapsFlatMaps.md  Marco.md  MemoryPartitions.md  NewAndDelete.md  Operator.md  Operators.md  PairsAndTuples.md  README.md  (+28 more)
docs/: Arrays.md  AutoAndDecltype.md  Bindings.md  CPPPerface.md  CharsAndStrings.md  Classes.md  CommonQtClasses.md  CommonQtStuffes.md  ConstConstexprAndStatic.md  ConversionAndCasting.md  DesignPatterns.md  DynamicArraysOrStdVector.md  Enums.md  Extern.md  FileIOs.md  FromGccToCPP.md  Functions.md  Gcc.md  Git.md  Handles.md  HidingOverloadingOverridingAndOverwriting.md  IntroductionToTheCPPSTL.md  ListsAndForwardLists.md  MacrosAndPragma.md  MacrosPreprocessorDirectivesAndPragma.md  MapsUnorderedMapsAndFlatMaps.md  MemoryPartitions.md  NewAndDelete.md  OpenCLAndCuda.md  Operators.md  PairsAndTuples.md  README.md  SetsUnorderedSetsAndFlatSets.md  SmartPointers.md  SomeCFunctionsAndOperators.md  SomeProgrammingTechniques.md  StacksAndQueues.md  StaticAssert.md  StdBindAndStdFunction.md  Structures.md  (+7 more)
docs/Qt6_study/: AnotherMenu.cpp  AnotherMenu.h  Basic.cpp  Basic.h  CMakeLists.txt  Icons.qrc  Main.cpp  Main.pro  MainWindow.cpp  MainWindow.h  Makefile  ObserveEventsAndSignals.cpp  ObserveEventsAndSignals.h  Pro.cpp  Pro.h  SimpleMenu.cpp  SimpleMenu.h  basic.h  main.cpp  main.pro
docs/bash/: BashGuidCH.md  BashGuidEN.md  Paradigm.sh  README.md
docs/cpp_project_example/: BubbleSort.cpp  BubbleSort.hpp  CMakeLists.txt  CircularQueue.hpp  Fun.cpp  FunHeader.h  FunN.cpp  Header.h  MList.cpp  Main.cpp  Makefile  MergeSort.cpp  MergeSort.hpp  MergeSortLayerByLayer.cpp  MergeSortLayerByLayer.hpp  SelectionSort.cpp  SelectionSort.hpp  Sort.cpp  Sort.hpp  compile_commands.json
docs/dft/: CompressionAndCompaction.md  LFSR-coded-test-patterns-for-scan-designs.txt  Linear-Algebra-with-Applications.txt  get_icl_info.md
docs/dft/example/: Broadcaster.v  BypassRegister.v  FullAdderCell_tb.v  InstructionDecoder.v  InstructionRegister.v  Makefile  Mux2To1Output.v  RippleFullAdder.v  RippleFullAdder_tb.v  TapController.v  Top.v  TopWithoutBC.v
docs/dft/example/adder/: FullAdderCell.v  Makefile  Mux2To1Input.v  Mux2To1Output.v  TopWithoutBC.v
docs/dft/example/jtag/: BoundaryScanCell.v  BoundaryScanChain.v  InstructionCell.v  InstructionDecoder.v  InstructionRegister.v  JTAG.v  Makefile  MuxDRIR.v  MuxDRs.v
docs/dft/example/tb/: BoundaryScanCell_tb.v  Broadcaster_tb.v  BypassRegister_tb.v  Compactor_tb.v  InstructionCell_tb.v  InstructionRegister_tb.v  RippleFullAdder_tb.v  TapController_tb.v  Top_tb.v
docs/dft/ripple_adder/: Fsm.ys  Makefile  Top.v  Top.ys
docs/dft/ripple_adder/adder/: Broadcaster.v  Compactor.v  FullAdderCell.v  Makefile  Mux2To1Input.v  Mux2To1Output.v  RippleFullAdder.v  TopWithoutBC.v
docs/dft/ripple_adder/jtag/: BoundaryScanCell.v  BoundaryScanChain.v  BoundaryScanChainInput.v  BoundaryScanChainOutput.v  BypassRegister.v  InstructionCell.v  InstructionDecoder.v  JTAG.v  (+6 more)
docs/dft/test_iWrite/: test_iWrite.stil  test_iWrite.tcl
docs/performance_comparison_between_gcc_and_clang/: Makefile  random_and_sum.cpp  test.sh
docs/perl/: Paradigm.pl  README.md
docs/python/: Paradigm.py  README.md
docs/tcl/: Paradigm.tcl  README.md  convertToJson.tcl
site/: 404.html  index.html  sitemap.xml
site/Algorithms/: index.html
site/Arrays/: index.html
site/AutoAndDecltype/: index.html
site/Bindings/: index.html
site/CPPPerface/: index.html
site/CharsAndStrings/: index.html
site/Classes/: index.html
site/ConstConstexprAndStatic/: index.html
site/ConversionAndCasting/: index.html
site/DynamicArraysOrStdVector/: index.html
site/Enums/: index.html
site/FileIOs/: index.html
site/FromGccToCPP/: index.html
site/Functions/: index.html
site/Gcc/: index.html
site/Git/: index.html
site/Handles/: index.html
site/HidingOverloadingOverridingAndOverwriting/: index.html
site/IntroductionToTheCPPSTL/: index.html
site/ListsAndForwardLists/: index.html
site/MacrosAndPragma/: index.html
site/MapsUnorderedMapsAndFlatMaps/: index.html
site/MapsUnorderedMapsFlatMaps/: index.html
site/MemoryPartitions/: index.html
site/NewAndDelete/: index.html
site/Operators/: index.html
site/PairsAndTuples/: index.html
site/SetsUnorderedSetsAndFlatSets/: index.html
site/SmartPointers/: index.html
site/SomeCFunctionsAndOperators/: index.html
site/SomeProgrammingTechniques/: index.html
site/StacksAndQueues/: index.html
site/StaticAssert/: index.html
site/StdBindAndStdFunction/: index.html
site/Structures/: index.html
site/Templates/: index.html
site/Threads/: index.html
site/Timers/: index.html
site/UnionStdAnyStdVariantStdOptional/: index.html
site/UsingTypedefNameSpaces/: index.html
site/Volatile/: index.html
site/makeAndMakefiles/: index.html
site/search/: search_index.json
(+47 files in other folders)
